# knowledgebase_guardian

./: .env  .env.cloud  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  config.yml  default_config.yml  pyproject.toml  quickstart.sh  setup_azure.sh
.github/: codecov.yml
.github/workflows/: tests.yaml
data/extension/: Leuven_aligned.txt  Leuven_contradictions.txt  Leuven_new.txt
data/raw/: City_of_Brussels.txt  Ghent.txt  Leuven.txt
data/vectorstore/: belgium.index  belgium.pkl
kb_guardian/: contradiction_detection.py  docs_chunks_conversion.py  kb_management.py
kb_guardian/utils/: deployment.py  paths.py  vectorstore.py
scripts/: create_vectorstore.py  detect_contradictions.py  extend_vectorstore.py  quickstart.sh
src/: detect_contradictions.py  docs_chunks_conversion.py  logger.py  vectorstore_creation.py
src/utils/: deployment.py  paths.py  vectorstore.py
tests/: test_contradiction_detection.py  test_docs_chunks_conversion.py  test_hello.py  test_logger.py
tests/files/: Leuven.txt  Leuven_unreadable.txt  leuven.index  leuven.pkl
tests/utils/: test_paths.py
